2008-02-28  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session.c (finalize): free priv->user_agent.
	#518798, Wouter Cloetens.

	* tests/ssl-test.c: Re-revert the change from 2008-02-09; the
	problem with ssl-test.c was not that soup_gnutls_init() wasn't
	thread-safe, it's that the server thread doesn't do anything that
	would ever cause soup_gnutls_init() to be called, and so if the
	client thread doesn't start first, the server thread will run
	without initializing GNUTLS.

2008-02-27  Benjamin Otte  <otte@gnome.org>

	* libsoup/soup-socket.c: (read_from_network), (soup_socket_read),
	(soup_socket_read_until), (soup_socket_write):
	ensure that nread/nwrote parameters aren't NULL. They are also
	properly set on error paths now.

2008-02-25  Dan Winship  <danw@gnome.org>

	* configure.in: 2.3.4

	* NEWS: Update

2008-02-25  Dan Winship  <danw@gnome.org>

	* docs/reference/Makefile.am (DOC_MODULE): rename from libsoup to
	libsoup-2.4
	(TARGET_DIR): don't need to override this now

	* docs/reference/libsoup-2.4.types:
	* docs/reference/libsoup-2.4-docs.txt:
	* docs/reference/libsoup-2.4-overrides.txt:
	* docs/reference/libsoup-2.4-sections.txt: Rename these from
	unversioned, to match DOC_MODULE

	Fixes doc installation to work with devhelp again. #518384, Mart
	Raudsepp.

2008-02-25  Benjamin Otte  <otte@gnome.org>

	* libsoup/soup-address.h:
	* libsoup/soup-auth-domain.h:
	* libsoup/soup-auth.h:
	* libsoup/soup-message.h:
	* libsoup/soup-server.h:
	* libsoup/soup-session-async.h:
	* libsoup/soup-session-sync.h:
	* libsoup/soup-session.h:
	* libsoup/soup-socket.h:
	* libsoup/soup-types.h:
	* libsoup/soup-uri.h:
	use an underscore for struct definitions. Fixes bug #518317.

2008-02-20  Sebastian Dröge  <slomo@circular-chaos.org>

	* libsoup.pc.in: Add gobject-2.0 and gio-2.0 to Requires.
	Move libxml-2.0 and the SSL dependency to Requires.private
	as no header is including them. Fixes bug #517631.

2008-02-11  Dan Winship  <danw@gnome.org>
